; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/i2c/extr_s5k5baf.c_s5k5baf_hw_set_awb.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/i2c/extr_s5k5baf.c_s5k5baf_hw_set_awb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.s5k5baf = type { %struct.s5k5baf_ctrls }
%struct.s5k5baf_ctrls = type { %struct.TYPE_4__*, %struct.TYPE_3__* }
%struct.TYPE_4__ = type { i32 }
%struct.TYPE_3__ = type { i32 }

@REG_SF_RGAIN = common dso_local global i32 0, align 4
@S5K5BAF_GAIN_GREEN_DEF = common dso_local global i32 0, align 4
@AALG_WB_EN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.s5k5baf*, i32)* @s5k5baf_hw_set_awb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @s5k5baf_hw_set_awb(%struct.s5k5baf* %0, i32 %1) #0 {
  %3 = alloca %struct.s5k5baf*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.s5k5baf_ctrls*, align 8
  store %struct.s5k5baf* %0, %struct.s5k5baf** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.s5k5baf*, %struct.s5k5baf** %3, align 8
  %7 = getelementptr inbounds %struct.s5k5baf, %struct.s5k5baf* %6, i32 0, i32 0
  store %struct.s5k5baf_ctrls* %7, %struct.s5k5baf_ctrls** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %25, label %10

10:                                               ; preds = %2
  %11 = load %struct.s5k5baf*, %struct.s5k5baf** %3, align 8
  %12 = load i32, i32* @REG_SF_RGAIN, align 4
  %13 = load %struct.s5k5baf_ctrls*, %struct.s5k5baf_ctrls** %5, align 8
  %14 = getelementptr inbounds %struct.s5k5baf_ctrls, %struct.s5k5baf_ctrls* %13, i32 0, i32 1
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @S5K5BAF_GAIN_GREEN_DEF, align 4
  %19 = load %struct.s5k5baf_ctrls*, %struct.s5k5baf_ctrls** %5, align 8
  %20 = getelementptr inbounds %struct.s5k5baf_ctrls, %struct.s5k5baf_ctrls* %19, i32 0, i32 0
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @s5k5baf_write_seq(%struct.s5k5baf* %11, i32 %12, i32 %17, i32 1, i32 %18, i32 1, i32 %23, i32 1, i32 1)
  br label %25

25:                                               ; preds = %10, %2
  %26 = load %struct.s5k5baf*, %struct.s5k5baf** %3, align 8
  %27 = load i32, i32* @AALG_WB_EN, align 4
  %28 = load i32, i32* %4, align 4
  %29 = call i32 @s5k5baf_hw_set_alg(%struct.s5k5baf* %26, i32 %27, i32 %28)
  ret void
}

declare dso_local i32 @s5k5baf_write_seq(%struct.s5k5baf*, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @s5k5baf_hw_set_alg(%struct.s5k5baf*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
